Fix header spacing on small devices

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -63,6 +63,11 @@
 }
 
 @media only screen and (max-width: 800px) {
+  .Header {
+    padding-right: $size-base;
+    padding-left: $size-base;
+  }
+
   .Header-sections {
     display: none;
   }
